# oql

./: .gitignore  CMakeLists.txt  LICENSE  MacOSXBundleInfo.plist.in  README.md  beta.html  docs.html  index.html  install.sh  installer.iss  package.sh
.github/workflows/: build-beta.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml  wiki-sync.yml
resources/: openqlab.desktop  oql.desktop  oql.rc  resources.qrc  webui.html
src/: main.cpp
src/engine/: AppSettings.cpp  AppSettings.h  AudioCue.cpp  AudioCue.h  AudioEngine.cpp  AudioEngine.h  AudioPlugin.h  BuiltinPlugins.h  ControlCues.cpp  ControlCues.h  Cue.cpp  Cue.h  CueList.cpp  CueList.h  GroupCue.cpp  GroupCue.h  ImageCue.cpp  ImageCue.h  LabelCue.cpp  LabelCue.h  Lv2Plugin.cpp  Lv2Plugin.h  MicCue.cpp  MicCue.h  PluginChain.cpp  PluginChain.h  RecordCue.cpp  RecordCue.h  ScriptCue.cpp  ScriptCue.h  ScriptEngine.cpp  ScriptEngine.h  TextCue.cpp  TextCue.h  VideoCue.cpp  VideoCue.h  VstPlugin.cpp  VstPlugin.h  Workspace.cpp  Workspace.h  (+1 more)
src/ui/: AboutDialog.cpp  ActiveCuesPanel.cpp  ActiveCuesPanel.h  CueInfoBar.cpp  CueInfoBar.h  CueListModel.cpp  CueListModel.h  CueListView.cpp  CueListView.h  CueRowDelegate.cpp  CueRowDelegate.h  ImageOutputWindow.cpp  ImageOutputWindow.h  InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  PluginChainWidget.cpp  PluginChainWidget.h  ScriptEditorDialog.cpp  ScriptEditorDialog.h  SettingsDialog.cpp  SettingsDialog.h  TextOutputWindow.cpp  TextOutputWindow.h  VideoOutputWindow.cpp  VideoOutputWindow.h  WaveformView.cpp  WaveformView.h  WebServer.cpp  WebServer.h
translations/: oql_en.ts  oql_es.ts  oql_fr.ts
wiki/: Architecture.md  Beta.md  Building.md  Cue-Types.md  Download.md  Getting-Started.md  Home.md  Plugin-Effects.md  Workspace-Format.md
